--- a/nowhite0825_1/test.html
+++ b/nowhite0825_1/test.html
@@ -7,7 +7,7 @@
 </style>
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>&frac14;</title>
 </head>
 <body>
 	<div id="test"></div>
