--- a/nowhite0825_1/test2.html
+++ b/nowhite0825_1/test2.html
@@ -12,99 +12,115 @@
 <script src="183.js"></script>
 <script src="http://s3.qhimg.com/static/2cf8bd87a8b17759/hidpiCanva.js"></script>
 <script>
-	var canvas = document.getElementById("test");
-	var ctx = canvas.getContext('2d');
-	ballRadius =30, g = 9.8 , mocali = 0.5,balls = [],collarg = 0.8;
-	pxpm = canvas.width/20;
-	var p = {x:0,y:0};
-	var img = new Image();
-	/*form eggSell*/
-	img.src = "http://pic.58pic.com/58pic/15/30/52/29s58PIC2gf_1024.jpg";
-	var direction = 1;
-	var fallingHeight = 200;
-	var time = 0;
-	var isfinish = false;
-	img.onload= function(){
-		setInterval(function(){
-			ctx.clearRect(0,0,canvas.width,canvas.height);
-			ctx.drawImage(img,p.x,p.y,20,20);
-			if(p.y == fallingHeight && isfinish == false){
-				direction = 0;
-				time++;
-				isfinish = true;
-			}else if(p.y == fallingHeight*0.5 && time == 1 && isfinish == true){
-				direction = 1;
-				time++;
-				isfinish = false;
-			}else if(p.y == fallingHeight*0.75 && time == 2 && isfinish == true){
-				direction = 0;
-				time++;
-				isfinish = false;
-			}else if(p.y == fallingHeight*0.87 && time == 3 && isfinish == true){
-				direction = 1;
-				time++;
-				isfinish = false;
+function Falling(tag_id , params){
+	var canvas = document.getElementById(tag_id);
+	var _this = this;
+	_this.falling = {
+		canvas: {
+			el: canvas,
+			w: canvas.offsetWidth,
+			h: canvas.offsetHeight
+		},
+		spirit: {
+			clearColor: 'rgba(255, 255, 255, 0.5)',
+			shape: {
+				isimg: true,
+				src: 'http://pic.58pic.com/58pic/15/30/52/29s58PIC2gf_1024.jpg',
+				width: 2,
+				height: 1,
+				type: 'line',
+				color: 'hsl(100, 100%, 62%)',
+				a: 1
+			},
+			num: {
+				random: true,
+				value: '',
+				max: 20,
+				min: 1
+			},
+			move: {
+				x: random(0, canvas.offsetWidth),
+				y: 0,
+				angle: 90,
+				v: 10,
+				hit: random(canvas.innerHeight * .8, canvas.innerHeight * .9)
+			},
+			animate: {
+				bumb:{
+					value: true,
+					pxpm: canvas.offsetWidth/20,
+					collarg: 0.8
+				},
+				rain: {
+					value: '',
+					a: 1,
+					va: .96
+				}
 			}
-			ballFall(direction,1);
-		},9);
+		},
+		clearColor: 'rgba(255, 255, 255, 0.5)',
+		g: 9.8
 	};
-	function ballFall(direction,speed){
-		if(direction == 1){
-			p.y = p.y + speed;
-		}else{
-			p.y = p.y - speed;
+	_this.falling.initCanvas();
+	_this.falling.canvasSize();
+	_this.falling.spiDraw();
+};
+	Falling.prototype = {
+		constructor:Falling,
+		initCanvas: function(){
+			var _this = this;
+			_this.canvas.ctx = _this.canvas.el.getContext('2d');
+		},
+		
+		canvasSize: function(){
+			var _this = this;
+			_this.canvas.el.width = _this.canvas.width;
+			_this.canvas.el.height = _this.canvas.height;
+		},
+		/*绘制质点*/
+		spiDraw: function(){
+			var _this = this;
+			if(_this.animate.rain.value){
+				if (_this.spirit.move.y > _this.spirit.move.hit){
+					_this.bezierDraw();
+				}
+			}
+			if(_this.spirit.shape.isimg){
+				var img = new Image();
+				img.src = _this.spirit.shape.src;
+				img.onload = function(){
+					_this.canvas.ctx.drawImage(img,_this.spirit.move.x,_this.spirit.move.y,_this.spirit.shape.width,_this.spirit.shape.height);
+				}
+			} else {
+				_this.canvas.ctx.fillStyle = _this.spirit.shape.color;
+				_this.canvas.ctx.fillRect(_this.spirit.move.x,_this.spirit.move.y, _this.spirit.shape.width, _this.spirit.shape.height);
+			}
+			_this.spiFall();
+		},
+		/*绘制波纹*/
+		bezierDraw: function(){
+			_this.canvas.ctx.beginPath();
+			_this.canvas.ctx.moreTo(_this.spirit.move.x,_this.spirit.move.y - _this.spirit.shape.height/2);
+			
+		},
+		
+		spiFall: function(){
+			var _this = this;
+			var interiorAngle = Math.PI - Math.PI * _this.spirit.move.angle / 180;
+			_this.spirit.move.vx = Math.cos(interiorAngle) * _this.spirit.move.v;
+			_this.spirit.move.vy = Math.sin(interiorAngle) * _this.spirit.move.v;
+			if(_this.spirit.move.y < _this.spirit.move.hit){
+				_this.spirit.move.y += _this.spirit.move.vy;
+				_this.spirit.move.x += _this.spirit.move.vx;
+			} else {
+				console.log('finish');
+			}
 		}
-	}
-	// Array.prototype.forEach = function(callback){
- //        for(var i=0;i<this.length;i++){
- //            callback.call(this[i]);
- //        }
- //    }
- //    balls.forEach(function(){
- //        this.run(t);
- //    });
-	// var Ball = function(x , y, src){
-	// 	this.x = x;
-	// 	this.y = y;
-	// 	this.oldx = x;
-	// 	this.oldy = y;
-	// 	this.vx = 0;
-	// 	this.vy = 0;
-	// 	this.direction = true;
-	// 	this.src = src;
-	// }
-	// Ball.prototype = {
-	// 	paint:function(){
-	// 		img.onload=function(){
-	// 			ctx.drawImage(this.src,p.x,p.y,20,20);
-	// 		}
-	// 	},
-	// 	run:function(){
-	// 		this.oldx = this.x;
- //                this.oldy = this.y;
-
- //                if(this.derection){
- //                     this.vx = this.vx < 0 ? 0 : this.vx - mocali * t;
- //                 }
- //                 else {
- //                     this.vx = this.vx > 0 ? 0 : this.vx + mocali * t;
- //                 }
- //                 this.vy = this.vy + g * t;
- //                 this.x += t * this.vx * pxpm;
- //                 this.y += t * this.vy * pxpm;
-
- //                 if(this.y > canvas.height - ballRadius || this.y < ballRadius){
- //                     this.y = this.y < ballRadius ? ballRadius : (canvas.height - ballRadius);
- //                     this.vy = -this.vy*collarg
- //                 }
- //                 if(this.x > canvas.width - ballRadius || this.x < ballRadius){
- //                     this.x = this.x < ballRadius ? ballRadius : (canvas.width - ballRadius);
- //                     this.derection = !this.derection;
- //                     this.vx = -this.vx*collarg;
- //                 }
-
- //            this.paint();
-	// 	}
-	// };
+	};
+function random(min, max) {
+    return Math.random() * (max - min) + min;
+}
+window.drops = [];
+new Falling('test');
 </script>
 </html>
