--- a/nowhite0825_1/test3.html
+++ b/nowhite0825_1/test3.html
@@ -45,22 +45,22 @@
 			},
 			draw: function() {
 				if (this.y > this.hit) {
-					// ctx.beginPath();
-					// ctx.moveTo(this.x, this.y - this.h / 2);
+					ctx.beginPath();
+					ctx.moveTo(this.x, this.y - this.h / 2);
 
-					// ctx.bezierCurveTo(
-					// 	this.x + this.w / 2, this.y - this.h / 2,
-					// 	this.x + this.w / 2, this.y + this.h / 2,
-					// 	this.x, this.y + this.h / 2);
+					ctx.bezierCurveTo(
+						this.x + this.w / 2, this.y - this.h / 2,
+						this.x + this.w / 2, this.y + this.h / 2,
+						this.x, this.y + this.h / 2);
 
-					// ctx.bezierCurveTo(
-					// 	this.x - this.w / 2, this.y + this.h / 2,
-					// 	this.x - this.w / 2, this.y - this.h / 2,
-					// 	this.x, this.y - this.h / 2);
+					ctx.bezierCurveTo(
+						this.x - this.w / 2, this.y + this.h / 2,
+						this.x - this.w / 2, this.y - this.h / 2,
+						this.x, this.y - this.h / 2);
 
-					// ctx.strokeStyle = 'hsla(180, 100%, 50%, '+this.a+')';
-					// ctx.stroke();
-					// ctx.closePath();
+					ctx.strokeStyle = 'hsla(180, 100%, 50%, '+this.a+')';
+					ctx.stroke();
+					ctx.closePath();
 					
 				} else if(this.isimg){
 					var self = this;
@@ -139,7 +139,7 @@
 
 		window.addEventListener("resize", resize);
 		setup();
-		//anim();
+		anim();
 		var t0 = new Date();
 		function falling() {
 			ctx.save();
@@ -156,7 +156,7 @@
 			//ctx.restore();
 			requestAnimationFrame(falling);
 		}
-		falling();
+		//falling();
 	</script>
 </body>
 </html>
